Fix images being stretched in blog

--- a/website/src/page/blog-page/blog-post-page.component.scss
+++ b/website/src/page/blog-page/blog-post-page.component.scss
@@ -215,12 +215,14 @@ $post-content-width: 800px;
         flex-direction: column;
         align-items: center;
         text-align: center;
+        width: 100%;
 
         img {
             display: block;
             border-radius: $border-radius;
             border: 1px solid $color-vaticle-light-purple;
             max-width: 100%;
+            height: 100%;
         }
 
         figcaption {
